# pbs

./: .gitignore  Cargo.toml  README.md  index.html  old_vue.vue  package-lock.json  package.json  store.db3  store.db3-journal  tsconfig.json
example/: dataset.txt
frontend/: App.vue  item.ts  style.css
frontend/components/: ImportCots.vue  NewItem.vue  PageNewItem.vue  PageSearchItem.vue  PageViewItem.vue  SearchItemRow.vue  TopMenu.vue  TopMenuItem copy.vue  TopMenuItem.vue
frontend/components/new_item/: ImportCots.vue  NewItem.vue  PageNewItem.vue
frontend/components/search/: PageSearchItem.vue  SearchItemRow.vue
frontend/components/top_menu/: TopMenu.vue  TopMenuItem.vue
frontend/components/view_item/: AddChild.vue  PageViewItem.vue  TreeItem.vue
pbs_cli/: Cargo.toml
pbs_cli/src/: cmdline.rs  main.rs  parser.rs
pbs_core/: Cargo.toml
pbs_core/src/: database.rs  db.sql  lib.rs  store.rs  tests.rs
pbs_repl/: Cargo.toml
pbs_repl/src/: main.rs  parser.rs
pbs_srv/: Cargo.toml
pbs_srv/src/: lib.rs  main.rs
pbs_tui/: cargo.toml
pbs_tui/src/: buffer.rs  main.rs  main_wnd.rs  screen.rs
pbs_tui/src/page/: help.rs  mod.rs  new_item.rs  search.rs
pbs_tui/src/widget/: mod.rs  paragraph.rs  prompt.rs  statusbar.rs  title.rs
pbs_ui/: Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
pbs_ui/public/: tailwind.css
pbs_ui/src/: client.rs  list_items.rs  main.rs  new_item.rs  search.rs  service.rs
pbs_ui/src/components/: app.rs  commons.rs  mod.rs  page_new_item.rs  page_search.rs  page_view_item.rs  panel_edit_item.rs  panel_history.rs  panel_item_report.rs  panel_new_item.rs  panel_recently_use.rs  panel_search.rs  panel_view_item.rs  route.rs  top_menu.rs
pbs_ui/src/components/assets/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
