[package]
name = "pbs_srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbs_core = {path = "../pbs_core"}
tokio = { version = "1.33", features = ["full"] }
axum="0.7"
serde={version="1.0", features =["derive"]}
serde_json="1.0"
tracing="0.1"
tracing-subscriber = "0.3"
