[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbs_srv={path = "../pbs_srv"}
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
tokio = { version = "1.33", features = ["full"] }
reqwest={version="0.11", features=["json"]}
serde={version="1.0", features =["derive"]}
serde_json="1.0"
tracing="0.1"
tracing-subscriber = "0.3"
futures-util = { version = "0.3", default-features = false }
