[package]
name = "pbs_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbs_srv={path = "../pbs_srv"}

dioxus = "0.4"
dioxus-desktop = "0.4"
dioxus-router = "0.4"

tokio = { version = "1.33", features = ["full"] }
futures-util = { version = "0.3", default-features = false }

serde={version="1.0", features =["derive"]}
serde_json="1.0"

reqwest={version="0.11", features=["json"]}

tracing="0.1"
tracing-subscriber = "0.3"
